[gd_scene load_steps=53 format=2]

[ext_resource path="res://sprites/character/character 1/mainCharacter1_sheet.png" type="Texture" id=1]
[ext_resource path="res://sprites/character/shadow.png" type="Texture" id=2]
[ext_resource path="res://scenes/player/player_controller.gd" type="Script" id=3]
[ext_resource path="res://sprites/ui/light_mask_no_diether.png" type="Texture" id=4]
[ext_resource path="res://sprites/character/character 2/mainCharacter2_sheet.png" type="Texture" id=5]
[ext_resource path="res://sprites/character/character 3/mainCharacter3_sheet.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 40 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/character2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 25 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle_down"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle_left"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle_right"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52, 53, 54, 55 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle_up"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk_down"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 8 ]
}

[sub_resource type="Animation" id=7]
resource_name = "walk_left"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44, 45 ]
}

[sub_resource type="Animation" id=8]
resource_name = "walk_right"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 58, 59, 60, 61 ]
}

[sub_resource type="Animation" id=9]
resource_name = "walk_up"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27, 28, 29, 24 ]
}

[sub_resource type="Animation" id=43]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 13 ]
}

[sub_resource type="Animation" id=44]
resource_name = "idle_down"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=45]
resource_name = "idle_left"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=46]
resource_name = "idle_right"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52, 53, 54, 55 ]
}

[sub_resource type="Animation" id=47]
resource_name = "idle_up"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=48]
resource_name = "walk_down"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=49]
resource_name = "walk_left"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44, 45 ]
}

[sub_resource type="Animation" id=50]
resource_name = "walk_right"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 58, 59, 60, 61 ]
}

[sub_resource type="Animation" id=51]
resource_name = "walk_up"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27, 28, 29, 24 ]
}

[sub_resource type="Animation" id=52]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 25 ]
}

[sub_resource type="Animation" id=53]
resource_name = "idle_down"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=54]
resource_name = "idle_left"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=55]
resource_name = "idle_right"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52, 53, 54, 55 ]
}

[sub_resource type="Animation" id=56]
resource_name = "idle_up"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=57]
resource_name = "walk_down"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=58]
resource_name = "walk_left"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44, 45 ]
}

[sub_resource type="Animation" id=59]
resource_name = "walk_right"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 58, 59, 60, 61 ]
}

[sub_resource type="Animation" id=60]
resource_name = "walk_up"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/character3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27, 28, 29, 24 ]
}

[sub_resource type="CircleShape2D" id=10]
radius = 15.3333

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "idle_down"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "idle_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=15]
blend_point_0/node = SubResource( 11 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 12 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 13 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 14 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "walk_left"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "walk_down"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "walk_right"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "walk_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=16]
blend_point_0/node = SubResource( 21 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 22 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 23 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 24 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachine" id=19]
states/Idle/node = SubResource( 15 )
states/Idle/position = Vector2( 303.667, 151.889 )
states/Walk/node = SubResource( 16 )
states/Walk/position = Vector2( 516.667, 151.889 )
transitions = [ "Idle", "Walk", SubResource( 17 ), "Walk", "Idle", SubResource( 18 ) ]
start_node = "Idle"
graph_offset = Vector2( -131, 52 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=20]

[sub_resource type="AnimationNodeStateMachinePlayback" id=61]

[sub_resource type="AnimationNodeStateMachinePlayback" id=63]

[sub_resource type="Animation" id=41]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("light:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("light:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=42]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("light:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.1, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("light:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.1, 1.0 ]
}

[node name="top down player" type="KinematicBody2D" groups=[
"player",
]]
z_index = 1
collision/safe_margin = 3.0
script = ExtResource( 3 )

[node name="light" type="Light2D" parent="."]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
offset = Vector2( 0, -18.067 )
texture_scale = 1.5
color = Color( 0.937255, 1, 0.32549, 1 )

[node name="YSort" type="YSort" parent="."]

[node name="shadow" type="Sprite" parent="YSort"]
position = Vector2( -2.37842, 31.3158 )
texture = ExtResource( 2 )

[node name="character" type="Sprite" parent="YSort"]
visible = false
texture = ExtResource( 1 )
hframes = 8
vframes = 8
frame = 40

[node name="character2" type="Sprite" parent="YSort"]
visible = false
texture = ExtResource( 5 )
hframes = 8
vframes = 8
frame = 25

[node name="character3" type="Sprite" parent="YSort"]
visible = false
texture = ExtResource( 6 )
hframes = 8
vframes = 8
frame = 25

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.44
anims/RESET = SubResource( 1 )
anims/idle_down = SubResource( 2 )
anims/idle_left = SubResource( 3 )
anims/idle_right = SubResource( 4 )
anims/idle_up = SubResource( 5 )
anims/walk_down = SubResource( 6 )
anims/walk_left = SubResource( 7 )
anims/walk_right = SubResource( 8 )
anims/walk_up = SubResource( 9 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
autoplay = "RESET"
playback_speed = 0.44
anims/RESET = SubResource( 43 )
anims/idle_down = SubResource( 44 )
anims/idle_left = SubResource( 45 )
anims/idle_right = SubResource( 46 )
anims/idle_up = SubResource( 47 )
anims/walk_down = SubResource( 48 )
anims/walk_left = SubResource( 49 )
anims/walk_right = SubResource( 50 )
anims/walk_up = SubResource( 51 )

[node name="AnimationPlayer3" type="AnimationPlayer" parent="."]
playback_speed = 0.44
anims/RESET = SubResource( 52 )
anims/idle_down = SubResource( 53 )
anims/idle_left = SubResource( 54 )
anims/idle_right = SubResource( 55 )
anims/idle_up = SubResource( 56 )
anims/walk_down = SubResource( 57 )
anims/walk_left = SubResource( 58 )
anims/walk_right = SubResource( 59 )
anims/walk_up = SubResource( 60 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.198196, 15.4597 )
shape = SubResource( 10 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 19 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 20 )
parameters/Idle/blend_position = Vector2( -0.00711298, 0.0602636 )
parameters/Walk/blend_position = Vector2( 0.00460255, 0.0112994 )

[node name="AnimationTree2" type="AnimationTree" parent="."]
tree_root = SubResource( 19 )
anim_player = NodePath("../AnimationPlayer2")
active = true
parameters/playback = SubResource( 61 )
parameters/Idle/blend_position = Vector2( 0.007, 0.007 )
parameters/Walk/blend_position = Vector2( 0, 0 )

[node name="AnimationTree3" type="AnimationTree" parent="."]
tree_root = SubResource( 19 )
anim_player = NodePath("../AnimationPlayer3")
active = true
parameters/playback = SubResource( 63 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Walk/blend_position = Vector2( 0, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="light animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 41 )
anims/idle = SubResource( 42 )
